--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../src/style.css">
     <title>KMarketer</title>
 </head>
-<body class="">
+<body>
+    <h1 class="text-2xl text-red-400">Hello world</h1>
     
 </body>
 </html>
