--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <title>KMarketer</title>
 </head>
 <body>
-    <h1 class="text-2xl text-red-400">Hello world</h1>
+    <header>
+        <h3 class="text-white">KMarketer</h3>
+
+    </header>
     
 </body>
 </html>
