--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,17 @@
     <title>KMarketer</title>
 </head>
 <body>
-    <header>
-        <h3 class="text-white">KMarketer</h3>
-
-    </header>
-    
+    <section class="bg-[url('/images/background.jpg')] h-64 w-full bg-cover bg-center">
+        <header class=" flex ">
+            <h3 class="text-white h-[58px] w-[187px] mt-[40px] ml-[136px] p-[13px 57px 13px 0px] gap-[10px]">KMarketer</h3>
+            <ul class="flex justify-end text-white gap-[21px] mt-[40px] ml-[785px] w-[373px] h-[24px]mt-[40px]">
+                <li><a href="">Home</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">Pricing</a></li>
+                <img src="../images/seach-icon.svg" class="w-[20px] h-[20px] mt-[5px]">
+                <img src="../images/supermarket-icon.svg" class="w-[20px] h-[20px] mt-[5px]">
+                <img src="../images/navbar-toggler.svg" class="w-[20px] h-[13.71px] ml-[540px] mt-[7px]"></ul>
+        </header>
+</section>
 </body>
 </html>
