--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
                 <img src="../images/supermarket-icon.svg" class="w-[20px] h-[20px] mt-[5px]">
                 <img src="../images/navbar-toggler.svg" class="w-[20px] h-[13.71px] ml-[540px] mt-[7px]"></ul>
         </header>
+        <div class="Fixed w-[1,050px]h-[571pxpx] mt-[104px] ml-[195px] p-[80px 0px 80px 0px] gap-[80px]">
+            <div class="Fixed w-[864px] Hug h-[411px]">
+
+            </div>
+        </div>
 </section>
 </body>
 </html>
