--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>KMarketer</title>
 </head>
 <body>
-    <section class="bg-[url('/images/background.jpg')] h-64 w-full bg-cover bg-center">
+    <section class="bg-[url('/images/background.jpg')] h-[680px] w-full bg-cover bg-center">
         <header class=" flex ">
             <h3 class="text-white h-[58px] w-[187px] mt-[40px] ml-[136px] p-[13px 57px 13px 0px] gap-[10px]">KMarketer</h3>
             <ul class="flex justify-end text-white gap-[21px] mt-[40px] ml-[785px] w-[373px] h-[24px]mt-[40px]">
@@ -18,9 +18,21 @@
                 <img src="../images/supermarket-icon.svg" class="w-[20px] h-[20px] mt-[5px]">
                 <img src="../images/navbar-toggler.svg" class="w-[20px] h-[13.71px] ml-[540px] mt-[7px]"></ul>
         </header>
-        <div class="Fixed w-[1,050px]h-[571pxpx] mt-[104px] ml-[195px] p-[80px 0px 80px 0px] gap-[80px]">
+        <div class="Fixed w-[1,050px]h-[571pxpx] mt-[104px] ml-[195px] p-[80px 0px 80px 0px] gap-[80px] flex items-center justify-center">
             <div class="Fixed w-[864px] Hug h-[411px]">
-
+                <h1 class="w-[573px] h-[143px] text-[hsla(0,0%,100%,1)] text-center  font-[800] leading-[80px] text-[58px] mt-[20px]">
+                    We Take Care of the Future
+                </h1>
+                <h4 class=" text-[hsla(0,0%,100%,1)] w-[539px] h-[60px] text-center leading-[30px] text-[20px] pt-[40px]">
+                    We know how large objects will act, but things on a 
+                    small scale just do not act that way.
+                </h4>
+                <div class="flex gap-[10px] mt-[40px]">
+                    <button type="button" class="focus:outline-none text-white bg-[hsla(35,100%,58%,1)] 
+                    w-[185px] h-[48px] rounded-[37px] ml-[36px] mr-[36px] mt-[40px]">Get a Quote Now</button>
+                   <button type="button" class="focus:outline-none text-[hsla(0,0%,100%,1)] 
+                     w-[185px] h-[48px] rounded-[37px] pt-1 border-[1px] solid hsla(0,0%,100%,1)] ml-[36px] mr-[36px] mt-[40px] " >Get a Quote Now</button>
+                </div>
             </div>
         </div>
 </section>
