--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                     <button type="button" class="focus:outline-none text-white bg-[hsla(35,100%,58%,1)] 
                     w-[185px] h-[48px] rounded-[37px] ml-[36px] mr-[36px] mt-[40px]">Get a Quote Now</button>
                    <button type="button" class="focus:outline-none text-[hsla(0,0%,100%,1)] 
-                     w-[185px] h-[48px] rounded-[37px] pt-1 border-[1px] solid hsla(0,0%,100%,1)] ml-[36px] mr-[36px] mt-[40px] " >Get a Quote Now</button>
+                     w-[185px] h-[48px] rounded-[37px] pt-1 border-[1px] solid hsla(0,0%,100%,1)] ml-[-20px]  mt-[40px]">Get a Quote Now</button>
                 </div>
             </div>
         </div>
