--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,24 @@
                     <button type="button" class="focus:outline-none text-white bg-[hsla(35,100%,58%,1)] 
                     w-[185px] h-[48px] rounded-[37px] ml-[36px] mr-[36px] mt-[40px]">Get a Quote Now</button>
                    <button type="button" class="focus:outline-none text-[hsla(0,0%,100%,1)] 
-                     w-[185px] h-[48px] rounded-[37px] pt-1 border-[1px] solid hsla(0,0%,100%,1)] ml-[-20px]  mt-[40px]">Get a Quote Now</button>
+                     w-[185px] h-[48px] rounded-[37px] pt-1 border-[1px] solid hsla(0,0%,100%,1)] ml-[-20px]  mt-[40px]">Learn More</button>
                 </div>
             </div>
         </div>
 </section>
+<section class="w-full h-[813px] bg-[hsla(228,28%,20%,1)] pt-[100px] pb-[100px] flex  items-center justify-center">
+    <div>
+        <div class="Fixed w-[1050px] Hug h-[197px] pb-[45px] pt-[45px] items-center justify-center">
+            <h2 class="font-Montserrat text-[40px] font-[700] leading-[57px] w-[353px]  h-[57px]
+            text-center tracking-tighter-[0.2px]  text-[hsla(0,0%,100%,1)]
+            ">WHY CHOOSE US</h2>
+            <p class="font-Montserrat text-[14px] leading-[20px] font-[500] text-center tracking-tighter-[0.2px]
+            text-[hsla(0,0%,100%,1)] justify-center w-[470px] h-[40px]
+             ">Problems trying to resolve the conflict between 
+               the two major realms of Classical physics: Newtonian mechanics 
+            </p>
+        </div>
+    </div>
+  </section>
 </body>
 </html>
