--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
             </div>
         </div>
 </section>
-<section class="w-full h-[813px] bg-[hsla(228,28%,20%,1)] pt-[100px] pb-[100px] flex  items-center justify-center">
-    <div>
+<section class="w-full h-[813px] bg-[hsla(228,28%,20%,1)] pt-[100px] pb-[100px] justify-center">
+    <div class="Hug w-[1050px]Hug h-[813px] left: 195px pt-[100px]  pb-[100px] ">
         <div class="Fixed w-[1050px] Hug h-[197px] pb-[45px] pt-[45px] items-center justify-center">
             <h2 class="font-Montserrat text-[40px] font-[700] leading-[57px] w-[353px]  h-[57px]
-            text-center tracking-tighter-[0.2px]  text-[hsla(0,0%,100%,1)]
+             tracking-tighter-[0.2px]  text-[hsla(0,0%,100%,1)] items-center justify-center
             ">WHY CHOOSE US</h2>
-            <p class="font-Montserrat text-[14px] leading-[20px] font-[500] text-center tracking-tighter-[0.2px]
-            text-[hsla(0,0%,100%,1)] justify-center w-[470px] h-[40px]
+            <p class="font-Montserrat text-[14px] leading-[20px] font-[500] tracking-tighter-[0.2px]
+            text-[hsla(0,0%,100%,1)] w-[470px] h-[40px] items-center justify-center
              ">Problems trying to resolve the conflict between 
                the two major realms of Classical physics: Newtonian mechanics 
             </p>
