--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
 </section>
-<section class="w-full h-[813px] bg-[hsla(228,28%,20%,1)] pt-[100px] pb-[100px] justify-center">
+<!-- <section class="w-full h-[813px] bg-[hsla(228,28%,20%,1)] pt-[100px] pb-[100px] justify-center">
     <div class="Hug w-[1050px]Hug h-[813px] left: 195px pt-[100px]  pb-[100px] ">
         <div class="Fixed w-[1050px] Hug h-[197px] pb-[45px] pt-[45px] items-center justify-center">
             <h2 class="font-Montserrat text-[40px] font-[700] leading-[57px] w-[353px]  h-[57px]
@@ -48,7 +48,39 @@
                the two major realms of Classical physics: Newtonian mechanics 
             </p>
         </div>
+        <div class="  flex flex-row w-[1,046px] h-[193px] gap-[30px] justify-center">
+            <div>
+                <div class="flex">
+                    <img src="../images/icn settings .icn-lg.svg" class="w-[48px] h-[48px]">
+                    <h5></h5>
+
+                </div>
+
+            </div>
+            <div>02</div>
+            <div>03</div>
+
+        </div>
     </div>
-  </section>
+  </section> -->
+<section class="bg-[hsla(228,28%,20%,1)] width: 1440px h-[813px] p-[195px] flex justify-center">
+    <div class="w-[1050px] h-[813px] pt-[100px] pb-[100px] pl-[195px]">
+        <div class="w-[1050px] h-[197px] pb-[45px] pt-[45px] flex justify-center items-center ">
+            <div class=" w-[864px] h-[107px] gap-[10px]  items-center justify-center ">
+                <h2 class="font-Montserrat text-[40px] font-[700] leading-[57px] w-[353px]  h-[57px]
+             tracking-tighter-[0.2px]  text-[hsla(0,0%,100%,1)] mt-[-250px] text-center
+            ">WHY CHOOSE US</h2>
+            <p class=" text-[14px] leading-[20px] font-[500] tracking-tighter-[0.2px]
+            text-[hsla(0,0%,100%,1)] w-[470px] h-[40px] text-center pt-[20px] ">  
+            Problems trying to resolve the conflict between 
+            the two major realms of Classical physics: Newtonian mechanics 
+            </p>
+                
+            </div>
+
+        </div>
+
+    </div>
+</section>
 </body>
 </html>
