--- a/public/index.html
+++ b/public/index.html
@@ -403,9 +403,24 @@
             >Book Appointment</button>
         </div>
     </div>
-    <div class="bg-[#FAFAFA] h-[142px] w-full flex" >
+    <div class="bg-[#FAFAFA] h-[142px] w-full flex">
+        <div class="w-[454px] h-[62px] mx-auto">
+            <h3 class="w-[454px] h-[52px] font-Montserrat
+            text-[24px] font-[700] leading-[32px] ml-[80px]">
+                Consulting Agency For Your Business 
+            </h3>
+            <p class="w-[273px] h-[20px] font-Montserrat 
+            text-[14px] font-[500] leading-[20px] mb-[-40px] text-[#737373]
+            ml-[80px]">the quick fox jumps over the lazy dog</p>
 
+        </div>
+        <button class="w-[160px] h-[58px] bg-[#FFA62B] ml-[17px] mt-[20px] rounded-[5px] font-Montserrat
+        text-[14px] font-[400] leading-[28px] text-center text-[#FFFFFF]"
+        >Subscribe</button>
      </div>
+</section>
+<section>
+    
 </section>
 
     
